--- a/node.js/att-node/views/index.ejs
+++ b/node.js/att-node/views/index.ejs
@@ -1,13 +1,13 @@
     <%- include ('partials/header.ejs') %>
     <%- include ('partials/navbar.ejs') %>
     
-    <h1>Melhores filmes por genero by Raíssa!</h1>
+    <h1>Melhores filmes por gênero by Raíssa!</h1>
     <hr/>
-    <!-- <ul> 
-        <li><a href="/romance">Produtos</a></li>
-        <li><a href="/acao">Clientes</a></li>
-        <li><a href="/comedia">Perfil</a></li>
+     <ul> 
+        <li><a href="/romance">Filmes de Romance</a></li>
+        <li><a href="/acao">Filmes de Ação</a></li>
+        <li><a href="/comedia">Filmes de Comédia</a></li>
     </ul>
-    <img src="/imgs/imagem1.png" width="1000px" alt="Imagem de capa">-->
+    <!--<img src="/imgs/imagem1.png" width="1000px" alt="Imagem de capa">-->
 
     <%- include ('partials/footer.ejs') %>
