--- a/node.js/att-node/views/partials/navbar.ejs
+++ b/node.js/att-node/views/partials/navbar.ejs
@@ -1,22 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Node.js</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/clientes">Clientes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/produtos">Produtos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/pedidos">Pedidos</a>
-      </li>
-    </ul>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="#acao">Ação</a>
+      <a class="nav-item nav-link" href="#comedia">Comédia</a>
+      <a class="nav-item nav-link" href="#romance">Romance</a>
+    </div>
   </div>
 </nav>
