--- a/node.js/nodejs-aula-05-SistemaLoja/views/clientes.ejs
+++ b/node.js/nodejs-aula-05-SistemaLoja/views/clientes.ejs
@@ -1,6 +1,32 @@
 <%- include ('partials/header.ejs') %>
     <%- include ('partials/navbar.ejs') %>
 
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                <h1>Cadastrar clientes</h1>
+            </div>
+            <div class="card-body">
+                <!-- formulario de caedastro -->
+                 <form action="/clientes/new" method="POST"> <!-- action = p onde vai enviar os dados -->
+                    <label>Nome do cliente:</label>
+                    <input type="text" name="nome" placeholder=" Insira o nome do cliente"
+                     class="form-conrol" required>
+
+                    <br> <label>CPF do cliente:</label>
+                    <input type="text" name="cpf" placeholder=" Insira o nome do cliente"
+                     class="form-conrol" required>
+
+                    <br> <label>Endereço do cliente:</label>
+                    <input type="text" name="endereco" placeholder=" Insira o nome do cliente"
+                     class="form-conrol mb-4" required>
+
+                    <br><input type="submit" class="btn btn-success" value="Cadastrar">
+                    <input type="reset" class="btn btn-danger" value="Limpar">
+                 </form>
+            </div>
+        </div>
+    </div>
         <div class="container">
             <div class="card">
                 <div class="card-header">
@@ -14,6 +40,7 @@
                                 <th>Nome:</th>
                                 <th>CPF:</th>
                                 <th>Endereço:</th>
+                                <th colspan="2" style="text-align: center;">Ações:</th> 
                             </tr>
                         </thead>
                         <tbody>
@@ -28,6 +55,21 @@
                                     </td>
                                     <td>
                                         <%= cliente.endereco %>
+                                    </td>
+                                    <td>
+                                        <a href="/clientes/edit/<%= cliente.id %>">
+                                            <button class="btn btn-warning">
+                                            Editar
+                                            </button>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="/clientes/delete/<%= cliente.id %>">
+                                            <button onclick="return confirm ('Deseja mesmo excluir o cliente <%= cliente.nome%>?')" 
+                                            class="btn btn-danger">
+                                            Excluir
+                                            </button>
+                                        </a>
                                     </td>
                                 </tr>
                                 <% }) %>
